--- a/Grupo4-SGULP/src/Vista/VistaInscripcion.form
+++ b/Grupo4-SGULP/src/Vista/VistaInscripcion.form
@@ -172,6 +172,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Anular inscripci&#xf3;n"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBAnularActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jBSalir">
       <Properties>
