--- a/Grupo4-SGULP/src/Vista/VistaListarInscripciones.form
+++ b/Grupo4-SGULP/src/Vista/VistaListarInscripciones.form
@@ -69,9 +69,7 @@
     <Component class="javax.swing.JComboBox" name="jCAlumno">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="1">
-            <StringItem index="0" value=""/>
-          </StringArray>
+          <StringArray count="0"/>
         </Property>
       </Properties>
       <Events>
